--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "xmcss",
   "displayName": "xmcss",
+  "icon": "icon.png",
   "description": "xmcss extension",
   "version": "0.0.1",
+  "publisher": "VaynePeng",
   "engines": {
     "vscode": "^1.90.0"
   },
