feat: 新增选择提示

--- a/src/app.json
+++ b/src/app.json
@@ -788,6 +788,74 @@
   "d-i": "{ display: inline; }",
   "d-ib": "{ display: inline-block; }",
   "d-if": "{ display: inline-flex; }",
+  "d-g": "{ display: grid; }",
+  "grid-rows-1": "{ grid-template-rows: repeat(1, minmax(0, 1fr)); }",
+  "grid-rows-2": "{ grid-template-rows: repeat(2, minmax(0, 1fr)); }",
+  "grid-rows-3": "{ grid-template-rows: repeat(3, minmax(0, 1fr)); }",
+  "grid-rows-4": "{ grid-template-rows: repeat(4, minmax(0, 1fr)); }",
+  "grid-rows-5": "{ grid-template-rows: repeat(5, minmax(0, 1fr)); }",
+  "grid-rows-6": "{ grid-template-rows: repeat(6, minmax(0, 1fr)); }",
+  "grid-rows-7": "{ grid-template-rows: repeat(7, minmax(0, 1fr)); }",
+  "grid-rows-8": "{ grid-template-rows: repeat(8, minmax(0, 1fr)); }",
+  "grid-cols-1": "{ grid-template-columns: repeat(1, minmax(0, 1fr)); }",
+  "grid-cols-2": "{ grid-template-columns: repeat(2, minmax(0, 1fr)); }",
+  "grid-cols-3": "{ grid-template-columns: repeat(3, minmax(0, 1fr)); }",
+  "grid-cols-4": "{ grid-template-columns: repeat(4, minmax(0, 1fr)); }",
+  "grid-cols-5": "{ grid-template-columns: repeat(5, minmax(0, 1fr)); }",
+  "grid-cols-6": "{ grid-template-columns: repeat(6, minmax(0, 1fr)); }",
+  "grid-cols-7": "{ grid-template-columns: repeat(7, minmax(0, 1fr)); }",
+  "grid-cols-8": "{ grid-template-columns: repeat(8, minmax(0, 1fr)); }",
+  "gap-0": "{ gap: 0px; }",
+  "gap-1": "{ gap: 1px; }",
+  "gap-2": "{ gap: 2px; }",
+  "gap-3": "{ gap: 3px; }",
+  "gap-4": "{ gap: 4px; }",
+  "gap-5": "{ gap: 5px; }",
+  "gap-6": "{ gap: 6px; }",
+  "gap-7": "{ gap: 7px; }",
+  "gap-8": "{ gap: 8px; }",
+  "gap-9": "{ gap: 9px; }",
+  "gap-10": "{ gap: 10px; }",
+  "gap-11": "{ gap: 11px; }",
+  "gap-12": "{ gap: 12px; }",
+  "gap-13": "{ gap: 13px; }",
+  "gap-14": "{ gap: 14px; }",
+  "gap-15": "{ gap: 15px; }",
+  "gap-16": "{ gap: 16px; }",
+  "gap-17": "{ gap: 17px; }",
+  "gap-18": "{ gap: 18px; }",
+  "gap-19": "{ gap: 19px; }",
+  "gap-20": "{ gap: 20px; }",
+  "gap-21": "{ gap: 21px; }",
+  "gap-22": "{ gap: 22px; }",
+  "gap-23": "{ gap: 23px; }",
+  "gap-24": "{ gap: 24px; }",
+  "gap-25": "{ gap: 25px; }",
+  "gap-26": "{ gap: 26px; }",
+  "gap-27": "{ gap: 27px; }",
+  "gap-28": "{ gap: 28px; }",
+  "gap-29": "{ gap: 29px; }",
+  "gap-30": "{ gap: 30px; }",
+  "gap-31": "{ gap: 31px; }",
+  "gap-32": "{ gap: 32px; }",
+  "gap-33": "{ gap: 33px; }",
+  "gap-34": "{ gap: 34px; }",
+  "gap-35": "{ gap: 35px; }",
+  "gap-36": "{ gap: 36px; }",
+  "gap-37": "{ gap: 37px; }",
+  "gap-38": "{ gap: 38px; }",
+  "gap-39": "{ gap: 39px; }",
+  "gap-40": "{ gap: 40px; }",
+  "gap-41": "{ gap: 41px; }",
+  "gap-42": "{ gap: 42px; }",
+  "gap-43": "{ gap: 43px; }",
+  "gap-44": "{ gap: 44px; }",
+  "gap-45": "{ gap: 45px; }",
+  "gap-46": "{ gap: 46px; }",
+  "gap-47": "{ gap: 47px; }",
+  "gap-48": "{ gap: 48px; }",
+  "gap-49": "{ gap: 49px; }",
+  "gap-50": "{ gap: 50px; }",
   "flex-n": "{ flex: none; }",
   "flex-1": "{ flex: 1; }",
   "flex-r": "{ flex-direction: row; }",
