--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
   "engines": {
     "vscode": "^1.90.0"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/VaynePeng/xmcss.git"
+  },
   "categories": [
     "Other"
   ],
